--- a/link1.html
+++ b/link1.html
@@ -20,8 +20,9 @@ aside {
         <a href="/link1.html">link1</a>
           <br>
         <a href="/link2.html">link2</a>
+        
       </aside>
 
-      this is the text for the page
+      this is link1 text
   </body>
 </html>
