set font size with css

--- a/index.html
+++ b/index.html
@@ -3,19 +3,10 @@
 
 <html lang="en">
   <head>
-<style>
-aside {
-  width: 30%;
-  padding-left: 15px;
-  margin-left: 15px;
-  float: right;
-  font-style: italic;
-  background-color: lightgray;
-}
-</style>
+<link rel="stylesheet" href="style.css">
     <title>portfoli</title>
   </head>
-  <body style="font-family: Comic Sans MS">
+  <body style="">
       <aside>
         <a href="/index.html">main</a>
           <br>
@@ -23,7 +14,6 @@ aside {
           <br>
         <a href="/link2.html">link2</a>
       </aside>
-
       this is the text for the page
   </body>
 </html>
