--- a/link1.html
+++ b/link1.html
@@ -3,19 +3,10 @@
 
 <html lang="en">
   <head>
-<style>
-aside {
-  width: 30%;
-  padding-left: 15px;
-  margin-left: 15px;
-  float: right;
-  font-style: italic;
-  background-color: lightgray;
-}
-</style>
+    <link rel="stylesheet" href="style.css">
     <title>portfoli</title>
   </head>
-  <body style="font-family: Comic Sans MS">
+  <body>
       <aside>
         <a href="/index.html">main</a>
           <br>
