load sidebar with js

--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
-
-
-<html lang="en">
-  <head>
-<link rel="stylesheet" href="style.css">
-    <title>portfoli</title>
-  </head>
-  <body style="">
-      <aside>
-        <a href="/index.html">main</a>
-          <br>
-        <a href="/link1.html">link1</a>
-          <br>
-        <a href="/link2.html">link2</a>
-      </aside>
-      this is the text for the page
-  </body>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <title>portfoli</title>
+        <script src="index.js"></script>
+    </head>
+    <body>
+        <div id="sidebar"></div>
+        <link rel="import" href="sidebar.html">
+        this is the text for the page
+    </body>
 </html>
+
