--- a/link1.html
+++ b/link1.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
-
-
-<html lang="en">
-  <head>
-    <link rel="stylesheet" href="style.css">
-    <title>portfoli</title>
-  </head>
-  <body>
-      <aside>
-        <a href="/index.html">main</a>
-          <br>
-        <a href="/link1.html">link1</a>
-          <br>
-        <a href="/link2.html">link2</a>
-      </aside>
-
-      this is link1 text
-  </body>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <title>portfoli</title>
+        <script src="index.js"> console.log("hello") </script>
+    </head>
+    <body>
+        <div id="sidebar"></div>
+        this is me
+        <picture>
+            <source srcset="linuxnazi.png">
+            <img src="linuxnazi.png" alt="Me">
+        </picture>
+    </body>
 </html>
