--- a/link2.html
+++ b/link2.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <link rel="stylesheet" href="style.css">
-    <title>portfoli</title>
-  </head>
-  <body>
-      <aside>
-        <a href="/index.html">main</a>
-          <br>
-        <a href="/link1.html">link1</a>
-          <br>
-        <a href="/link2.html">link2</a>
-        
-      </aside>
-
-      this  is link2 text
-  </body>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <title>portfoli</title>
+        <script src="index.js"></script>
+    </head>
+    <body>
+        <div id="sidebar"></div>
+        this is link2 text
+    </body>
 </html>
