remove unneeded code

--- a/link1.html
+++ b/link1.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <title>portfoli</title>
-        <script src="index.js"> console.log("hello") </script>
+        <script src="index.js"></script>
     </head>
     <body>
         <div id="sidebar"></div>
