personal website lol

--- a/funi.html
+++ b/funi.html
@@ -12,5 +12,6 @@
             <source srcset="linuxnazi.png">
             <img src="linuxnazi.png" alt="Me">
         </picture>
+        (its aa joke)
     </body>
 </html>
