--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="sidebar"></div>
-        this is the text for the page
+        hello, i am not a web develop so sry for bad lookin websit
     </body>
 </html>
 
