load contents with js on /index.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
         <script src="index.js"></script>
     </head>
     <body>
-        <div id="sidebar"></div>
-        hello, i am not a web develop so sry for bad lookin websit
+        <aside>
+            <ul>
+                <button onclick="change_content('main.html')">main</button>
+                <button onclick="change_content('funi.html')">funi</button>
+                <button onclick="change_content('link2.html')">link2</button>
+            </ul>
+        </aside>
+        <div id="contents"></div>
     </body>
+    <footer>
+        Copyright postmodernist1488
+    </footer>
 </html>
 
