a little more content

--- a/funi.html
+++ b/funi.html
@@ -1,6 +1,6 @@
 this is me
 <picture>
-    <source srcset="linuxnazi.png">
     <img src="linuxnazi.png" alt="Me">
 </picture>
-its a joke:)
+<br>
+ok its actually a joke :)
