--- a/main.html
+++ b/main.html
@@ -1,1 +1,18 @@
-hello, i am not a web develop so sry for bad lookin websit
+<p style="margin-top: 0; margin-bottom: 0.5em;">hello, i am not a web develop so sry for bad lookin websit</p>
+Languges i know currently (in order of learning):
+<ol style="list-style-position: inside; margin-top: 0">
+    <li>Python</li>
+    <li>C/C++</li>
+    <li>Bash</li>
+    <li>Haskell (a little)</li>
+    <li>Rust</li>
+    <li>Kotlin</li>
+</ol>
+
+<p>
+I like programming.
+</p>
+<a href="https://github.com/postmodernist1488/morpher">
+<img src="https://user-images.githubusercontent.com/101038833/248553937-93748b50-5813-4e87-8154-54457e9b7782.gif" alt="iceland morphs into ireland wow"/>
+</a>
+<br> Look, it morphs
