--- a/index.html
+++ b/index.html
@@ -17,14 +17,19 @@
             <button style="background-color: #81a1c1" onclick="set_content('main.html')">int main</button>
             <button style="background-color: #a3be8c" onclick="set_content('funi.html')">funi</button>
             <button style="background-color: #ebcb8b" onclick="set_content('link.html')">link</button>
-            <div class="checkbox-with-text">
-                <label> 
-                    <input type="checkbox" id="rainbow-toggle"/>rainbow</label>
-            </div>
+            <button style="background-color: #f59335" onclick="set_content('link2.html')">link2</button>
+            <button style="background-color: #bf616a" onclick="set_content('link3.html')">link3</button>
+            <fieldset>
+                <legend style="font-size: 0.5em; color: white">Funi stuff</legend>
+                <div class="checkbox-with-text">
+                    <label> 
+                        <input type="checkbox" id="rainbow-toggle"/>rainbow</label>
+                </div>
+            </fieldset>
         </div>
         <div id="contents"></div>
         <footer>
-            Copyright postmodernist1488
+            Copyright postmodernist1848
         </footer>
     </body>
 </html>
