--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <div style="color: lightgray; text-align: center; padding-bottom: 5%; margin-top: 20%">
                 my websit
             </div>
-            <button style="background-color: #81a1c1" onclick="set_content('main.html')">int main</button>
-            <button style="background-color: #a3be8c" onclick="set_content('funi.html')">funi</button>
-            <button style="background-color: #ebcb8b" onclick="set_content('link.html')">link</button>
-            <button style="background-color: #f59335" onclick="set_content('link2.html')">link2</button>
-            <button style="background-color: #bf616a" onclick="set_content('link3.html')">link3</button>
+            <button style="background-color: #81a1c1" onclick="set_content('main')">int main</button>
+            <button style="background-color: #a3be8c" onclick="set_content('funi')">funi</button>
+            <button style="background-color: #ebcb8b" onclick="set_content('link')">link</button>
+            <button style="background-color: #f59335" onclick="set_content('link2')">link2</button>
+            <button style="background-color: #bf616a" onclick="set_content('link3')">link3</button>
             <fieldset>
                 <legend style="font-size: 0.5em; color: white">Funi stuff</legend>
                 <div class="checkbox-with-text">
