Add static site generation
build.py script simply creates every page with the inner html of the
"contents" div replaced with the files in src/contents

--- a/src/template.html
+++ b/src/template.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        <title>portfoli</title>
+        <title>postmodernist1848 personal website</title>
+        <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
         <script src="index.js"></script>
     </head>
     <body>
@@ -14,11 +15,11 @@
             <div style="color: lightgray; text-align: center; padding-bottom: 5%; margin-top: 20%">
                 my websit
             </div>
-            <button style="background-color: #81a1c1" onclick="set_content('main')">int main</button>
-            <button style="background-color: #a3be8c" onclick="set_content('funi')">funi</button>
-            <button style="background-color: #ebcb8b" onclick="set_content('link')">link</button>
-            <button style="background-color: #f59335" onclick="set_content('link2')">link2</button>
-            <button style="background-color: #bf616a" onclick="set_content('link3')">link3</button>
+            <a style="background-color: #81a1c1" href="/index.html">int main</a>
+            <a style="background-color: #a3be8c" href="/funi.html">funi</a>
+            <a style="background-color: #ebcb8b" href="/link.html">link</a>
+            <a style="background-color: #f59335" href="/link2.html">link2</a>
+            <a style="background-color: #bf616a" href="/link3.html">link3</a>
             <fieldset>
                 <legend style="font-size: 0.5em; color: white">Funi stuff</legend>
                 <div class="checkbox-with-text">
@@ -27,9 +28,11 @@
                 </div>
             </fieldset>
         </div>
-        <div id="contents"></div>
+        <div id="contents">
+
+        </div>
         <footer>
-            Copyright postmodernist1848
+            Copyright <a href="https://github.com/postmodernist1848">postmodernist1848</a>
         </footer>
     </body>
 </html>
