add a typing game

--- a/src/template.html
+++ b/src/template.html
@@ -17,7 +17,7 @@
             </div>
             <a style="background-color: #81a1c1" href="/index.html">int main</a>
             <a style="background-color: #a3be8c" href="/funi.html">funi</a>
-            <a style="background-color: #ebcb8b" href="/link.html">link</a>
+            <a style="background-color: #ebcb8b" href="/game.html">game</a>
             <a style="background-color: #f59335" href="/link2.html">link2</a>
             <a style="background-color: #bf616a" href="/link3.html">link3</a>
             <fieldset>
