--- a/src/contents/game.html
+++ b/src/contents/game.html
@@ -6,7 +6,7 @@
     </progress>
     <input id="typing-game-input" onkeydown="return valid(event.key);">
 </div>
-<label style="width: 0; color: black; font-size: 20pt; position: absolute; top: 20px; right: 10%"
+<label style="color: black; font-size: 20pt; position: absolute; top: 20px; right: 60px; text-align: right"
     for="difficulty-slider" id="difficulty-label">Difficulty:</label>
 <input style="width: 10%; position: absolute; top: 80px; right: 0; margin-right: 60px" type="range" min="1" max="4" value="1" id="difficulty-slider">
 <button style="position: absolute; top: 150px; margin-right: 60px" id="restart-game" onclick="start_game()">Restart</button>
