--- a/funi.html
+++ b/funi.html
@@ -16,8 +16,8 @@
             <a style="background-color: #81a1c1" href="/index.html">int main</a>
             <a style="background-color: #a3be8c" href="/funi.html">funi</a>
             <a style="background-color: #ebcb8b" href="/game.html">game</a>
-            <a style="background-color: #f59335" href="/link2.html">link2</a>
-            <a style="background-color: #bf616a" href="/link3.html">link3</a>
+            <a style="background-color: #f59335" href="/log.html">log</a>
+            <a style="background-color: #bf616a" href="/link.html">link</a>
             <fieldset style="height: 10%">
                 <legend style="font-size: 0.5em; color: white">Funi stuff</legend>
                 <div class="checkbox-with-text">
@@ -28,6 +28,7 @@
         </div>
         <div id="contents">i like building stuff from the ground up
 <img src="assets/chadhash.png" alt="Me">
+<img src="assets/tuxsuc.jpg" alt="tux succ">
 
 
         </div>
