--- a/game.html
+++ b/game.html
@@ -16,8 +16,8 @@
             <a style="background-color: #81a1c1" href="/index.html">int main</a>
             <a style="background-color: #a3be8c" href="/funi.html">funi</a>
             <a style="background-color: #ebcb8b" href="/game.html">game</a>
-            <a style="background-color: #f59335" href="/link2.html">link2</a>
-            <a style="background-color: #bf616a" href="/link3.html">link3</a>
+            <a style="background-color: #f59335" href="/log.html">log</a>
+            <a style="background-color: #bf616a" href="/link.html">link</a>
             <fieldset style="height: 10%">
                 <legend style="font-size: 0.5em; color: white">Funi stuff</legend>
                 <div class="checkbox-with-text">
@@ -26,16 +26,20 @@
                 </div>
             </fieldset>
         </div>
-        <div id="contents"><label for="difficulty-slider" id="difficulty-label">Difficulty:</label>
+        <div id="contents"><style>
+    span {
+        font-size: 1000%;
+    }
+</style>
+<label for="difficulty-slider" id="difficulty-label">Difficulty:</label>
 <input type="range" min="1" max="4" value="1" id="difficulty-slider">
 <button style="position: absolute; top: 150px; margin-right: 20px" id="restart-game" onclick="start_game()">Restart</button>
-
-    <canvas width=1000 height=800>
-        typing game
-    </canvas>
+<canvas width=1000 height=800>
+    typing game
+</canvas>
 <div class="center" style="width: 50%; margin: 0 auto">
-        <progress id="healthbar" value="100" max="100"> </progress>
-        <input id="typing-game-input" onkeydown="return valid(event.key);">
+    <progress id="healthbar" value="100" max="100"> </progress>
+    <input id="typing-game-input" onkeydown="return valid(event.key);">
 </div>
 
 <script src="typing_game.js"></script>
