--- a/src/contents/index.html
+++ b/src/contents/index.html
@@ -1,4 +1,14 @@
 <p style="margin-top: 0; margin-bottom: 0.5em;">hello, i am not a web develop so sry for bad lookin websit</p>
+
+On my websit u can:
+<ul style="list-style-position: inside; margin-top: 0">
+    <li>learn a bit <a href="/index.html">about me</a></li>
+    <li>look at some <a href="/funi.html">programming memes</a></li>
+    <li>play a <a href="/game.html">typing game</a></li>
+    <li>read <a href="/log.html">my pseudophilosophical journal</a></li>
+    <li>and more</li>
+</ul>
+
 Languges i know currently (in order of learning):
 <ol style="list-style-position: inside; margin-top: 0">
     <li>Python</li>
