deploy: 515875182c1cd88b39a39484dced929edc55bade

--- a/index.html
+++ b/index.html
@@ -1,65 +1,63 @@
 <!DOCTYPE html>
+
 <html>
-    <head>
-        <link rel="stylesheet" href="style.css">
-        <title>postmodernist1848 personal website</title>
-        <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <script src="index.js"></script>
-    </head>
-    <body>
-        <div class="checkbox-with-text" style="position: fixed; top: 0; margin: 20px" id="sidebar-checkbox-with-text">
-            <label id="sidebar-toggle-label"><input type="checkbox" id="sidebar-toggle"/>hide sidebar</label>
-        </div>
-        <div id="sidebar" class="sidebar">
-            <div id="my-websit">my websit</div>
-            <a style="background-color: #81a1c1" href="/index.html">int main</a>
-            <a style="background-color: #a3be8c" href="/funi.html">funi</a>
-            <a style="background-color: #ebcb8b" href="/game.html">game</a>
-            <a style="background-color: #f59335" href="/log.html">log</a>
-            <a style="background-color: #bf616a" href="/link.html">link</a>
-            <fieldset style="height: 10%">
-                <legend style="font-size: 0.5em; color: white">Funi stuff</legend>
-                <div class="checkbox-with-text">
-                    <label> 
-                        <input type="checkbox" id="rainbow-toggle"/>rainbow</label>
-                </div>
-            </fieldset>
-        </div>
-        <div id="contents"><p style="margin-top: 0; margin-bottom: 0.5em;">hello, i am not a web develop so sry for bad lookin websit</p>
+<head>
+<link href="style.css" rel="stylesheet"/>
+<title>postmodernist1848 personal website</title>
+<link href="/assets/favicon.ico" rel="icon" type="image/x-icon"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<script src="index.js"></script>
+</head>
+<body>
+<div class="checkbox-with-text" id="sidebar-checkbox-with-text" style="position: fixed; top: 0; margin: 20px">
+<label id="sidebar-toggle-label"><input id="sidebar-toggle" type="checkbox"/>hide sidebar</label>
+</div>
+<div class="sidebar" id="sidebar">
+<div id="my-websit">my websit</div>
+<a class="current" href="/index.html" style="background-color: #81a1c1">int main</a>
+<a href="/funi.html" style="background-color: #a3be8c">funi</a>
+<a href="/game.html" style="background-color: #ebcb8b">game</a>
+<a href="/log.html" style="background-color: #f59335">log</a>
+<a href="/link.html" style="background-color: #bf616a">link</a>
+<fieldset style="height: 10%">
+<legend style="font-size: 0.5em; color: white">Funi stuff</legend>
+<div class="checkbox-with-text">
+<label>
+<input id="rainbow-toggle" type="checkbox"/>rainbow</label>
+</div>
+</fieldset>
+</div>
+<div id="contents">
+<p style="margin-top: 0; margin-bottom: 0.5em;">hello, i am not a web develop so sry for bad lookin websit</p>
 
 On my websit u can:
 <ul style="list-style-position: inside; margin-top: 0">
-    <li>learn a bit <a href="/index.html">about me</a></li>
-    <li>look at some <a href="/funi.html">programming memes</a></li>
-    <li>play a <a href="/game.html">typing game</a></li>
-    <li>read <a href="/log.html">my pseudophilosophical journal</a></li>
-    <li>and more</li>
+<li>learn a bit <a href="/index.html">about me</a></li>
+<li>look at some <a href="/funi.html">programming memes</a></li>
+<li>play a <a href="/game.html">typing game</a></li>
+<li>read <a href="/log.html">my pseudophilosophical journal</a></li>
+<li>and more</li>
 </ul>
 
 Languges i know currently (in order of learning):
 <ol style="list-style-position: inside; margin-top: 0">
-    <li>Python</li>
-    <li>C/C++</li>
-    <li>Bash</li>
-    <li>Haskell (a little)</li>
-    <li>Rust</li>
-    <li>Kotlin</li>
+<li>Python</li>
+<li>C/C++</li>
+<li>Bash</li>
+<li>Haskell (a little)</li>
+<li>Rust</li>
+<li>Kotlin</li>
 </ol>
-
 <p>
 I like programming.
 </p>
 <a href="https://github.com/postmodernist1488/morpher">
-<img src="https://user-images.githubusercontent.com/101038833/248553937-93748b50-5813-4e87-8154-54457e9b7782.gif" alt="iceland morphs into ireland wow"/>
+<img alt="iceland morphs into ireland wow" src="https://user-images.githubusercontent.com/101038833/248553937-93748b50-5813-4e87-8154-54457e9b7782.gif"/>
 </a>
-<br> Look, it morphs
-
-
-        </div>
-        <footer>
+<br/> Look, it morphs
+</div>
+<footer>
             Copyright <a href="https://github.com/postmodernist1848">postmodernist1848</a>
-        </footer>
-    </body>
+</footer>
+</body>
 </html>
-
