--- a/game.html
+++ b/game.html
@@ -1,54 +1,51 @@
 <!DOCTYPE html>
+
 <html>
-    <head>
-        <link rel="stylesheet" href="style.css">
-        <title>postmodernist1848 personal website</title>
-        <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <script src="index.js"></script>
-    </head>
-    <body>
-        <div class="checkbox-with-text" style="position: fixed; top: 0; margin: 20px" id="sidebar-checkbox-with-text">
-            <label id="sidebar-toggle-label"><input type="checkbox" id="sidebar-toggle"/>hide sidebar</label>
-        </div>
-        <div id="sidebar" class="sidebar">
-            <div id="my-websit">my websit</div>
-            <a style="background-color: #81a1c1" href="/index.html">int main</a>
-            <a style="background-color: #a3be8c" href="/funi.html">funi</a>
-            <a style="background-color: #ebcb8b" href="/game.html">game</a>
-            <a style="background-color: #f59335" href="/log.html">log</a>
-            <a style="background-color: #bf616a" href="/link.html">link</a>
-            <fieldset style="height: 10%">
-                <legend style="font-size: 0.5em; color: white">Funi stuff</legend>
-                <div class="checkbox-with-text">
-                    <label> 
-                        <input type="checkbox" id="rainbow-toggle"/>rainbow</label>
-                </div>
-            </fieldset>
-        </div>
-        <div id="contents"><style>
+<head>
+<link href="style.css" rel="stylesheet"/>
+<title>postmodernist1848 personal website</title>
+<link href="/assets/favicon.ico" rel="icon" type="image/x-icon"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<script src="index.js"></script>
+</head>
+<body>
+<div class="checkbox-with-text" id="sidebar-checkbox-with-text" style="position: fixed; top: 0; margin: 20px">
+<label id="sidebar-toggle-label"><input id="sidebar-toggle" type="checkbox"/>hide sidebar</label>
+</div>
+<div class="sidebar" id="sidebar">
+<div id="my-websit">my websit</div>
+<a class="" href="/index.html" style="background-color: #81a1c1">int main</a>
+<a class="" href="/funi.html" style="background-color: #a3be8c">funi</a>
+<a class="current" href="/game.html" style="background-color: #ebcb8b">game</a>
+<a href="/log.html" style="background-color: #f59335">log</a>
+<a href="/link.html" style="background-color: #bf616a">link</a>
+<fieldset style="height: 10%">
+<legend style="font-size: 0.5em; color: white">Funi stuff</legend>
+<div class="checkbox-with-text">
+<label>
+<input id="rainbow-toggle" type="checkbox"/>rainbow</label>
+</div>
+</fieldset>
+</div>
+<div id="contents"><style>
     span {
         font-size: 1000%;
     }
 </style>
 <label for="difficulty-slider" id="difficulty-label">Difficulty:</label>
-<input type="range" min="1" max="4" value="1" id="difficulty-slider">
-<button style="position: absolute; top: 150px; margin-right: 20px" id="restart-game" onclick="start_game()">Restart</button>
-<canvas width=1000 height=800>
+<input id="difficulty-slider" max="4" min="1" type="range" value="1"/>
+<button id="restart-game" onclick="start_game()" style="position: absolute; top: 150px; margin-right: 20px">Restart</button>
+<canvas height="800" width="1000">
     typing game
 </canvas>
 <div class="center" style="width: 50%; margin: 0 auto">
-    <progress id="healthbar" value="100" max="100"> </progress>
-    <input id="typing-game-input" onkeydown="return valid(event.key);">
+<progress id="healthbar" max="100" value="100"> </progress>
+<input id="typing-game-input" onkeydown="return valid(event.key);"/>
 </div>
-
 <script src="typing_game.js"></script>
-
-
-        </div>
-        <footer>
+</div>
+<footer>
             Copyright <a href="https://github.com/postmodernist1848">postmodernist1848</a>
-        </footer>
-    </body>
+</footer>
+</body>
 </html>
-
