--- a/log.html
+++ b/log.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
+
 <html>
-    <head>
-        <link rel="stylesheet" href="style.css">
-        <title>postmodernist1848 personal website</title>
-        <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <script src="index.js"></script>
-    </head>
-    <body>
-        <div class="checkbox-with-text" style="position: fixed; top: 0; margin: 20px" id="sidebar-checkbox-with-text">
-            <label id="sidebar-toggle-label"><input type="checkbox" id="sidebar-toggle"/>hide sidebar</label>
-        </div>
-        <div id="sidebar" class="sidebar">
-            <div id="my-websit">my websit</div>
-            <a style="background-color: #81a1c1" href="/index.html">int main</a>
-            <a style="background-color: #a3be8c" href="/funi.html">funi</a>
-            <a style="background-color: #ebcb8b" href="/game.html">game</a>
-            <a style="background-color: #f59335" href="/log.html">log</a>
-            <a style="background-color: #bf616a" href="/link.html">link</a>
-            <fieldset style="height: 10%">
-                <legend style="font-size: 0.5em; color: white">Funi stuff</legend>
-                <div class="checkbox-with-text">
-                    <label> 
-                        <input type="checkbox" id="rainbow-toggle"/>rainbow</label>
-                </div>
-            </fieldset>
-        </div>
-        <div id="contents"><div id="paste">
-    <h1 id="loading-message">Loading</h1>
+<head>
+<link href="style.css" rel="stylesheet"/>
+<title>postmodernist1848 personal website</title>
+<link href="/assets/favicon.ico" rel="icon" type="image/x-icon"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<script src="index.js"></script>
+</head>
+<body>
+<div class="checkbox-with-text" id="sidebar-checkbox-with-text" style="position: fixed; top: 0; margin: 20px">
+<label id="sidebar-toggle-label"><input id="sidebar-toggle" type="checkbox"/>hide sidebar</label>
+</div>
+<div class="sidebar" id="sidebar">
+<div id="my-websit">my websit</div>
+<a class="" href="/index.html" style="background-color: #81a1c1">int main</a>
+<a class="" href="/funi.html" style="background-color: #a3be8c">funi</a>
+<a class="" href="/game.html" style="background-color: #ebcb8b">game</a>
+<a class="current" href="/log.html" style="background-color: #f59335">log</a>
+<a href="/link.html" style="background-color: #bf616a">link</a>
+<fieldset style="height: 10%">
+<legend style="font-size: 0.5em; color: white">Funi stuff</legend>
+<div class="checkbox-with-text">
+<label>
+<input id="rainbow-toggle" type="checkbox"/>rainbow</label>
+</div>
+</fieldset>
+</div>
+<div id="contents"><div id="paste">
+<h1 id="loading-message">Loading</h1>
 </div>
 <script>
     //TODO: create my own cors proxy
@@ -86,12 +87,9 @@
             'Error. Try refreshing the page'
     })
 </script>
-
-
-        </div>
-        <footer>
+</div>
+<footer>
             Copyright <a href="https://github.com/postmodernist1848">postmodernist1848</a>
-        </footer>
-    </body>
+</footer>
+</body>
 </html>
-
