--- a/src/contents/log.html
+++ b/src/contents/log.html
@@ -14,36 +14,28 @@
             initial_state.clear()
             rainbowize_contents()
         }
-        var h5s = document.getElementsByTagName('h5');
-        console.log(h5s)
-        for (let i = 0; i < h5s.length - 1; i++) {
-            const divWrapper = document.createElement('div');
-            let startElement = h5s[i];
-            let currentElement = startElement.nextSibling;
-            let endElement = h5s[i + 1]
-            while (currentElement !== endElement) {
-                const nextElement = currentElement.nextSibling;
-                divWrapper.appendChild(currentElement);
-                currentElement = nextElement;
+        const h5s = document.getElementsByTagName('h5');
+
+        let currentH5 = h5s[0];
+        let currentNode = currentH5.nextSibling;
+        let divWrapper = document.createElement('div');
+
+        while (currentNode !== null) {
+            const nextNode = currentNode.nextSibling;
+
+            if (currentNode.tagName === "H5") {
+                currentH5.insertAdjacentElement('afterend', divWrapper);
+                currentH5 = currentNode;
+                divWrapper = document.createElement('div');
+            } else {
+                divWrapper.appendChild(currentNode);
             }
-            startElement.insertAdjacentElement('afterend', divWrapper);
+            currentNode = nextNode;
         }
+        currentH5.insertAdjacentElement('afterend', divWrapper);
 
-        // last one
-        let currentElement = h5s[h5s.length - 1].nextSibling;
-        const divWrapper = document.createElement('div');
-        console.log(currentElement)
-        while (currentElement !== null) {
-            console.log(currentElement)
-            const nextElement = currentElement.nextSibling;
-            divWrapper.appendChild(currentElement);
-            currentElement = nextElement;
-        }
-        h5s[h5s.length - 1].insertAdjacentElement('afterend', divWrapper);
-
-
-        for (i = 0; i < h5s.length; i++) {
-            h5s[i].addEventListener("click", function() {
+        for (h5 of h5s) {
+            h5.addEventListener("click", function() {
                 var content = this.nextElementSibling;
                 if (content.style.display !== "none") {
                     content.style.display = "none";
