--- a/src/template.html
+++ b/src/template.html
@@ -17,7 +17,7 @@
             <a style="background-color: #a3be8c" href="/funi.html">funi</a>
             <a style="background-color: #ebcb8b" href="/game.html">game</a>
             <a style="background-color: #f59335" href="/log.html">log</a>
-            <a style="background-color: #bf616a" href="/link.html">link</a>
+            <a style="background-color: #bf616a" href="/links.html">links</a>
             <fieldset style="height: 10%">
                 <legend style="font-size: 0.5em; color: white">Funi stuff</legend>
                 <div class="checkbox-with-text">
