--- a/funi.html
+++ b/funi.html
@@ -18,7 +18,7 @@
 <a class="current" href="/funi.html" style="background-color: #a3be8c">funi</a>
 <a href="/game.html" style="background-color: #ebcb8b">game</a>
 <a href="/log.html" style="background-color: #f59335">log</a>
-<a href="/link.html" style="background-color: #bf616a">link</a>
+<a href="/links.html" style="background-color: #bf616a">links</a>
 <fieldset style="height: 10%">
 <legend style="font-size: 0.5em; color: white">Funi stuff</legend>
 <div class="checkbox-with-text">
