--- a/links.html
+++ b/links.html
@@ -18,7 +18,7 @@
 <a class="" href="/funi.html" style="background-color: #a3be8c">funi</a>
 <a class="" href="/game.html" style="background-color: #ebcb8b">game</a>
 <a class="" href="/log.html" style="background-color: #f59335">log</a>
-<a class="current" href="/link.html" style="background-color: #bf616a">link</a>
+<a class="current" href="/links.html" style="background-color: #bf616a">links</a>
 <fieldset style="height: 10%">
 <legend style="font-size: 0.5em; color: white">Funi stuff</legend>
 <div class="checkbox-with-text">
@@ -27,8 +27,20 @@
 </div>
 </fieldset>
 </div>
-<div id="contents">wow u found an anime girl reading K&amp;R <br/>
-<img alt="The C programming language" src="assets/cproglang.gif"/>
+<div id="contents">wow u found an anime girl reading K&amp;R
+<img alt="The C programming language" src="assets/cproglang.gif" style="width: 320px; margin: 20px auto; padding: 10px;
+border: dashed; border-width: 5px; border-color: pink; display: block;"/>
+Contact me at: 
+<ul style="margin-top: 0">
+<li>
+        Email: <a href="mailto: elitic.pantheism@gmail.com">
+            elitic.pantheism@gmail.com
+        </a>
+<li> Telegram: <a href="https://t.me/postmodernist1848">
+            @postmodernist1848
+        </a>
+</li>
+</li></ul>
 </div>
 <footer>
             Copyright <a href="https://github.com/postmodernist1848">postmodernist1848</a>
