--- a/src/contents/links.html
+++ b/src/contents/links.html
@@ -1,6 +1,6 @@
 wow u found an anime girl reading K&R
 <img style="width: 320px; margin: 20px auto; padding: 10px;
-border: dashed; border-width: 5px; border-color: pink; display: block;"
+border: dashed; border-width: 5px; border-color: pink"
 src="assets/cproglang.gif" alt="The C programming language">
 Contact me at: 
 <ul style="margin-top: 0">
