deploy: daf81d1b4a4e8f3c239bdb497957b8226917e419

--- a/links.html
+++ b/links.html
@@ -29,7 +29,7 @@
 </div>
 <div id="contents">wow u found an anime girl reading K&amp;R
 <img alt="The C programming language" src="assets/cproglang.gif" style="width: 320px; margin: 20px auto; padding: 10px;
-border: dashed; border-width: 5px; border-color: pink; display: block;"/>
+border: dashed; border-width: 5px; border-color: pink"/>
 Contact me at: 
 <ul style="margin-top: 0">
 <li>
