--- a/funi.html
+++ b/funi.html
@@ -30,6 +30,25 @@
 <div id="contents">i like building stuff from the ground up
 <img alt="Me" src="assets/chadhash.png"/>
 <img alt="tux succ" src="assets/tuxsuc.jpg"/>
+<strong>Input your phone number</strong>
+<div id="number">+0 (000) 000-0000</div>
+<input id="phone-number-slider" max="99999999999" min="0" step="1" style="display: block" type="range" value="0"/>
+<button style="display: inline">Send</button> (this button doesn't do anything)
+<script>
+    function phonify(s) {
+        s = s.padStart(11, "0");
+        const a = s.charAt(0);
+        const b = s.substring(1, 4);
+        const c = s.substring(4, 7);
+        const d = s.substring(7, 11);
+        return `+${a} (${b}) ${c}-${d}`
+    }
+
+    const slider = document.getElementById("phone-number-slider");
+    slider.addEventListener('input', () => {
+        document.getElementById("number").innerHTML = phonify(slider.value);
+    })
+</script>
 </div>
 <footer>
             Copyright <a href="https://github.com/postmodernist1848">postmodernist1848</a>
