--- a/index.html
+++ b/index.html
@@ -30,31 +30,8 @@
 <div id="contents">
 <p style="margin-top: 0; margin-bottom: 0.5em;">hello, i am not a web develop so sry for bad lookin websit</p>
 
-On my websit u can:
-<ul style="list-style-position: inside; margin-top: 0">
-<li>learn a bit <a href="/index.html">about me</a></li>
-<li>look at some <a href="/funi.html">programming memes</a></li>
-<li>play a <a href="/game.html">typing game</a></li>
-<li>read <a href="/log.html">my pseudophilosophical journal</a></li>
-<li>and more</li>
-</ul>
-
-Languges i know currently (in order of learning):
-<ol style="list-style-position: inside; margin-top: 0">
-<li>Python</li>
-<li>C/C++</li>
-<li>Bash</li>
-<li>Haskell (a little)</li>
-<li>Rust</li>
-<li>Kotlin</li>
-</ol>
-<p>
-I like programming.
-</p>
-<a href="https://github.com/postmodernist1488/morpher">
-<img alt="iceland morphs into ireland wow" src="https://user-images.githubusercontent.com/101038833/248553937-93748b50-5813-4e87-8154-54457e9b7782.gif"/>
-</a>
-<br/> Look, it morphs
+ATTENTION: THE SITE HAS BEEN MOVED TO A GO REWRITE:
+<a href="https://postmodernist1848.ru/">postmodernist1848.ru</a>
 </div>
 <footer>
             Copyright <a href="https://github.com/postmodernist1848">postmodernist1848</a>
