Update index.html with www

--- a/src/contents/index.html
+++ b/src/contents/index.html
@@ -1,4 +1,4 @@
 <p style="margin-top: 0; margin-bottom: 0.5em;">hello, i am not a web develop so sry for bad lookin websit</p>
 
 ATTENTION: THE SITE HAS BEEN MOVED TO A GO REWRITE:
-<a href="https://postmodernist1848.ru/">postmodernist1848.ru</a>
+<a href="https://www.postmodernist1848.ru/">www.postmodernist1848.ru</a>
